feat: add user get and adjust axios fetch
