# backend/static/swagger.json
@@ -13,6 +13,10 @@
     {
       "name": "Authentication",
       "description": "User registration, login, logout, and status"
+    },
+    {
+      "name": "User",
+      "description": "Operations related to users (Authentication Required)"
     }
   ],
   "securityDefinitions": {
@@ -249,6 +253,45 @@
           }
         }
       }
+    },
+    "/app/users": {
+      "get": {
+        "summary": "Get a list of users.",
+        "tags": ["User"],
+        "security": [{ "cookieAuth": [] }],
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "type": "integer",
+            "description": "Page number for pagination.",
+            "default": 1
+          },
+          {
+            "name": "per_page",
+            "in": "query",
+            "type": "integer",
+            "description": "Number of items per page.",
+            "default": 10
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A list of users and pagination information.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "items": {
+                  "type": "array",
+                  "items": { "$ref": "#/definitions/User" }
+                },
+                "pagination": { "$ref": "#/definitions/Pagination" }
+              }
+            }
+          },
+          "401": { "$ref": "#/responses/UnauthorizedError" }
+        }
+      }
     }
   },
   "definitions": {
@@ -265,17 +308,37 @@
       "type": "object",
       "required": ["firstName", "lastName", "email"],
       "properties": {
-        "firstName": { "type": "string", "description": "The first name of the contact." },
-        "lastName": { "type": "string", "description": "The last name of the contact." },
-        "email": { "type": "string", "format": "email", "description": "The email address of the contact." }
+        "firstName": {
+          "type": "string",
+          "description": "The first name of the contact."
+        },
+        "lastName": {
+          "type": "string",
+          "description": "The last name of the contact."
+        },
+        "email": {
+          "type": "string",
+          "format": "email",
+          "description": "The email address of the contact."
+        }
       }
     },
     "ContactUpdateInput": {
       "type": "object",
       "properties": {
-        "firstName": { "type": "string", "description": "The updated first name of the contact." },
-        "lastName": { "type": "string", "description": "The updated last name of the contact." },
-        "email": { "type": "string", "format": "email", "description": "The updated email address of the contact." }
+        "firstName": {
+          "type": "string",
+          "description": "The updated first name of the contact."
+        },
+        "lastName": {
+          "type": "string",
+          "description": "The updated last name of the contact."
+        },
+        "email": {
+          "type": "string",
+          "format": "email",
+          "description": "The updated email address of the contact."
+        }
       }
     },
     "Pagination": {
